# CCDB

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dissip.eny  ErrorFile.err  KineticE.eny  build.sh  coil.opt  coil_0.chk  commands.md  session.xml  session_template.xml  sim.py
solvers/: CMakeLists.txt
solvers/ADRSolver/: ADRSolver.cpp  CMakeLists.txt
solvers/ADRSolver/EquationSystems/: EigenValuesAdvection.cpp  EigenValuesAdvection.h  Helmholtz.cpp  Helmholtz.h  Laplace.cpp  Laplace.h  MMFAdvection.cpp  MMFAdvection.h  Poisson.cpp  Poisson.h  Projection.cpp  Projection.h  SteadyAdvectionDiffusion.cpp  SteadyAdvectionDiffusion.h  SteadyAdvectionDiffusionReaction.cpp  SteadyAdvectionDiffusionReaction.h  UnsteadyAdvection.cpp  UnsteadyAdvection.h  UnsteadyAdvectionDiffusion.cpp  UnsteadyAdvectionDiffusion.h  UnsteadyDiffusion.cpp  UnsteadyDiffusion.h  UnsteadyInviscidBurger.cpp  UnsteadyInviscidBurger.h  UnsteadyInviscidBurgers.cpp  UnsteadyInviscidBurgers.h  UnsteadyReactionDiffusion.cpp  UnsteadyReactionDiffusion.h  UnsteadyViscousBurgers.cpp  UnsteadyViscousBurgers.h
solvers/ADRSolver/Tests/: AdvDiff3D_AllElmt_GJP.tst  Advection1D_WeakDG_GAUSS_LAGRANGE.xml  Advection1D_WeakDG_GLL_LAGRANGE.xml  Advection1D_WeakDG_MODIFIED.xml  Advection2D_dirichlet_deformed_MODIFIED_10x10_varP.tst  Advection2D_dirichlet_deformed_MODIFIED_10x10_varP.xml  Advection2D_m12_DG_quad_VarP.tst  Advection2D_m12_DG_quad_VarP.xml  Advection2D_m12_DG_quad_VarP_par.tst  Advection2D_m12_DG_tri_VarP.xml  Advection3D_AllElmt_GJP.tst  Advection3D_DG_hex_faceRotation.xml  Advection3D_DG_hex_faceRotation1122.xml  Advection3D_DG_hex_faceRotation1221.xml  Advection3D_DG_hex_varP_faceRotation.xml  Advection3D_DG_hex_varP_faceRotation1122.tst  Advection3D_DG_hex_varP_faceRotation1221.tst  Advection3D_DG_prism.xml  Advection3D_DG_prism_varP.tst  Advection3D_DG_prism_varP.xml  Advection3D_DG_pyr.tst  Advection3D_DG_pyr.xml  Advection3D_DG_pyr_varP.tst  Advection3D_DG_pyr_varP.xml  CubeAllElements.tst  ExDiffusion_VarCoeff.tst  ExDiffusion_VarCoeff.xml  ExReactionDiffusion2D.tst  ExReactionDiffusion2D.xml  FilterPython.tst  FilterPython.xml  FilterPython_Class.py  FilterPython_Function.py  Helmholtz2D_DirectFull_pRef.tst  Helmholtz2D_DirectFull_pRef.xml  Helmholtz3D_CubeDirichlet_par.tst  Helmholtz3D_CubePeriodic.tst  Helmholtz3D_CubePeriodic_RotateFace.tst  Helmholtz3D_CubePeriodic_RotateFace_par.tst  Helmholtz3D_CubePeriodic_par.tst  (+110 more)
solvers/AcousticSolver/: AcousticSolver.cpp  CMakeLists.txt
solvers/AcousticSolver/EquationSystems/: APE.h  AcousticSystem.cpp  AcousticSystem.h  LEE.h
solvers/AcousticSolver/RiemannSolvers/: APELaxFriedrichsSolver.cpp  APELaxFriedrichsSolver.h  APEUpwindSolver.cpp  APEUpwindSolver.h  AcousticSolver.h  LEELaxFriedrichsSolver.cpp  LEELaxFriedrichsSolver.h  LEESolver.h  LEEUpwindSolver.cpp  LEEUpwindSolver.h
solvers/AcousticSolver/Tests/: APE_3DPulse_WeakDG_MODIFIED.tst  APE_3DPulse_WeakDG_MODIFIED.xml
solvers/CardiacEPSolver/: CMakeLists.txt  CardiacEPSolver.cpp
solvers/CardiacEPSolver/CellModels/: AlievPanfilov.cpp  AlievPanfilov.h  CellModel.cpp  CellModel.h  CourtemancheRamirezNattel98.cpp  CourtemancheRamirezNattel98.h  FentonKarma.cpp  FentonKarma.h  FitzhughNagumo.cpp  FitzhughNagumo.h  Fox02.cpp  Fox02.h  LuoRudy91.cpp  LuoRudy91.h  PanditGilesDemir03.cpp  PanditGilesDemir03.h  TenTusscher06.cpp  TenTusscher06.h  Winslow99.cpp  Winslow99.h
solvers/CardiacEPSolver/EquationSystems/: Bidomain.cpp  Bidomain.h  BidomainRoth.cpp  BidomainRoth.h  Monodomain.cpp  Monodomain.h
solvers/CardiacEPSolver/Filters/: FilterBenchmark.cpp  FilterBenchmark.h  FilterCellHistoryPoints.cpp  FilterCellHistoryPoints.h  FilterCheckpointCellModel.cpp  FilterCheckpointCellModel.h  FilterElectrogram.cpp  FilterElectrogram.h  FilterHilbertFFTPhase.cpp  FilterHilbertFFTPhase.h  FilterOffsetPhase.cpp  FilterOffsetPhase.h
solvers/CardiacEPSolver/Stimuli/: Protocol.cpp  ProtocolS1.cpp  ProtocolS1.h  ProtocolS1S2.cpp  ProtocolS1S2.h  ProtocolSingle.cpp  ProtocolSingle.h  StimulusCircle.cpp  StimulusCircle.h  StimulusPoint.cpp  StimulusPoint.h  StimulusRect.cpp  StimulusRect.h
solvers/CompressibleFlowSolver/: CMakeLists.txt  CompressibleFlowSolver.cpp
solvers/CompressibleFlowSolver/ArtificialDiffusion/: ArtificialDiffusion.cpp  NonSmoothShockCapture.cpp  NonSmoothShockCapture.h
solvers/CompressibleFlowSolver/BoundaryConditions/: EnforceEntropyPressure.cpp  EnforceEntropyPressure.h  EnforceEntropyTotalEnthalpy.cpp  EnforceEntropyTotalEnthalpy.h  EnforceEntropyVelocity.cpp  EnforceEntropyVelocity.h  EnforceRhoP.cpp  ExtrapOrder0BC.cpp  ExtrapOrder0BC.h  IsentropicVortexBC.cpp  IsentropicVortexBC.h  PressureInflowFileBC.cpp  PressureInflowFileBC.h  PressureMachTemperatureBC.cpp  PressureMachTemperatureBC.h  PressureOutflowBC.cpp  PressureOutflowBC.h  PressureOutflowNonReflectiveBC.cpp  PressureOutflowNonReflectiveBC.h  WallBC.cpp  (+13 more)
solvers/DiffusionSolver/: CMakeLists.txt  DiffusionSolver.cpp  DiffusionSolverTimeInt.cpp
solvers/DummySolver/: CMakeLists.txt  DummySolver.cpp
solvers/ImageWarpingSolver/: CMakeLists.txt  ImageWarpingSolver.cpp
solvers/IncNavierStokesSolver/: CMakeLists.txt  IncNavierStokesSolver.cpp
solvers/LinearElasticSolver/: CMakeLists.txt  LinearElasticSolver.cpp
solvers/MMFSolver/: CMakeLists.txt  MMFSolver.cpp
solvers/PulseWaveSolver/: CMakeLists.txt  PulseWaveSolver.cpp
solvers/ReviewSolution/: CMakeLists.txt  ReviewSolution.cpp
solvers/ShallowWaterSolver/: CMakeLists.txt  ShallowWaterSolver.cpp
solvers/VortexWaveInteraction/: CMakeLists.txt  CalcVWIplusPressure.cpp  VortexWaveInteraction.cpp  VortexWaveInteractionSolver.cpp
tests/: CMakeLists.txt  Metric.cpp  Metric.h  MetricEigenvalue.cpp  MetricEigenvalue.h  MetricExecutionTime.cpp  MetricExecutionTime.h  MetricFile.cpp  MetricFile.h  MetricFileExists.cpp  MetricFileExists.h  MetricL2.h  MetricLInf.h  MetricNoWarning.cpp  MetricNoWarning.h  MetricPrecon.h  MetricPyUnitTest.h  MetricRegex.cpp  MetricRegex.h  TestData.cpp  TestData.h  Tester.cpp.in
(+713 files in other folders)
